--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -23,8 +23,8 @@
         <b>Dere tjener {{product.profit2 / 100}},-</b>
         <p>Anbefalt salgspris {{product.price2 / 100}},-</p>
 
-        <p style="margin-bottom: 0px; color: #008cba; transition: all 0.3s ease;"
-           [ngClass]="{'bold': product.hover}">Trykk for å vise detaljer</p>
+        <!--<p style="margin-bottom: 0px; color: #008cba; transition: all 0.3s ease;"-->
+           <!--[ngClass]="{'bold': product.hover}">Trykk for å vise detaljer</p>-->
       </div>
     </div>
   </div>
