--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row" style="padding-top: 14px">
       <div class="col-md-4 text-center">
-        <p><i class="fa fa-envelope"></i> <a href="mailto:kontakt@traddugnad.no" style="color: white">kontakt@traddugnad.no</a>
+        <p><i class="fa fa-envelope"></i> <a href="mailto:kundeservice@onlinedugnad.no" style="color: white">kundeservice@onlinedugnad.no</a>
         </p>
       </div>
       <div class="col-md-4 text-center">
