--- a/src/app/components/profit-calculator/profit-calculator.component.html
+++ b/src/app/components/profit-calculator/profit-calculator.component.html
@@ -9,7 +9,7 @@
           <nouislider [config]="slider.config" [(ngModel)]="slider.model"
                       (ngModelChange)="onSliderChange()"></nouislider>
         </div>
-        <strong>Total fortjeneste: {{totalProfit}},-</strong>
+        <strong>Dere tjener {{totalProfit}},-</strong>
       </div>
     </div>
     <div class="col-md-6 text-center" style="padding: 10px">
