--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -3,7 +3,7 @@
   <div class="row" style="padding: 40px 0">
     <div class="col-md-8 offset-md-2">
       <h1>Personlig service</h1>
-      <p style="font-size: 18px;">Noen lag og foreninger har mye erfaring og kompetanse på dugnader. Dere velger hvor
+      <p style="font-size: 18px;">Dere velger selv hvor
         tett oppfølging dere ønsker.
         Ønsker dere kun å bestille, finner dere alt som trengs på forsiden. Mange ønsker personlig service med fast
         kontaktperson, som følger opp tett med gode tips og hjelp til organisering. Noen ønsker en plan for å skape
