--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -33,7 +33,7 @@
           <a class="nav-link" [routerLink]="['/bestilling']">Bestilling</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/slik-fungerer-det']">Tips og info</a>
+          <a class="nav-link" [routerLink]="['/slik-fungerer-det']">Dugnad på 1-2-3</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/personlig-service']">Personlig service</a>
