- Fixed env bug - Updated angular-cli - Updated bootstrap

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,8 +1,8 @@
 <app-navigation></app-navigation>
 
 <div class="container">
-  <div class="row" style="padding: 40px 0">
-    <div class="col-md-8 offset-md-2">
+  <div class="row justify-content-center" style="padding: 40px 0">
+    <div class="col-md-8">
       <h1>Om oss</h1>
       <h5><b>Vårt fokusområde er enkelhet og høy fortjeneste</b></h5>
       <p>I motsetning til å fylle opp garasjen med store pakker og gå flere turer i nabolaget ved levering, tilbyr vi
