--- a/src/app/components/digital-order-form/digital-order-form.component.html
+++ b/src/app/components/digital-order-form/digital-order-form.component.html
@@ -1,8 +1,8 @@
 <app-navigation></app-navigation>
 
 <div class="container">
-  <div class="row" style="padding: 40px 0">
-    <div class="col-md-8 offset-md-2">
+  <div class="row justify-content-center" style="padding: 40px 0">
+    <div class="col-md-8">
       <h1>Digitalt bestillingsskjema</h1>
 
       <h5>Kvikt, enkelt og risikofritt</h5>
