--- a/src/app/components/how/how.component.html
+++ b/src/app/components/how/how.component.html
@@ -1,8 +1,8 @@
 <app-navigation></app-navigation>
 
 <div class="container">
-  <div class="row" style="padding: 40px 0">
-    <div class="col-md-8 offset-md-2">
+  <div class="row justify-content-center" style="padding: 40px 0">
+    <div class="col-md-8">
       <h1>Dugnad på 1-2-3</h1>
       <p>For de som ikke har arrangert dugnad tidligere eller rett og slett har lyst på litt tips - her er en enkel
         guide.</p>
