--- a/src/app/components/profit-calculator/profit-calculator.component.html
+++ b/src/app/components/profit-calculator/profit-calculator.component.html
@@ -47,11 +47,11 @@
         <h4>Begynn med dugnaden i dag, enkelt og risikofritt</h4>
         <p>Vi tilbyr både tradisjonelle og digitale bestillingsskjema for dine kunder</p>
       </div>
-      <div class="row">
-        <div class="col-md-6" style="padding: 10px;">
-          <a href="#" class="btn btn-lg btn-secondary form-control" (click)="downloadForm()">Tradisjonelt
-            bestillingsskjema</a>
-        </div>
+      <div class="row justify-content-center">
+        <!--<div class="col-md-6" style="padding: 10px;">-->
+          <!--<a href="#" class="btn btn-lg btn-secondary form-control" (click)="downloadForm()">Tradisjonelt-->
+            <!--bestillingsskjema</a>-->
+        <!--</div>-->
         <div class="col-md-6" style="padding: 10px;">
           <a [routerLink]="['/digitalt-bestillingsskjema']" class="btn btn-lg btn-primary form-control">
             Digitalt
