--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
-    <div class="row header-row">
-      <div class="col-md-8 offset-md-2 text-center" style="padding: 10px">
+    <div class="row header-row justify-content-center">
+      <div class="col-md-8 text-center" style="padding: 10px">
         <div class="box pad-box">
           <h2 class="sale-title">HØSTKAMPANJE!</h2>
           <h3 class="sale-sub-title">Over <strong>56% fortjeneste</strong> på alle produkter</h3>
