--- a/src/app/components/order-sample/order-sample.component.html
+++ b/src/app/components/order-sample/order-sample.component.html
@@ -2,8 +2,8 @@
   <button type="button" class="close" aria-label="Close" id="close-signup-modal" (click)="activeModal.close()">
     <span aria-hidden="true">&times;</span>
   </button>
-  <div class="row" style="margin: 75px 0">
-    <div class="col-md-8 offset-md-2 text-center">
+  <div class="row justify-content-center" style="margin: 75px 0">
+    <div class="col-md-8text-center">
       <h3 class="title" style="margin-bottom: 20px">Fyll inn for å få gratis vareprøver!</h3>
       <form role="form" [formGroup]="myForm" (ngSubmit)="submitForm(myForm.value)" novalidate>
         <div class="form-group">
