--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,8 +1,8 @@
 <app-navigation></app-navigation>
 
 <div class="container-fluid">
-  <div class="row" style="padding: 40px 0">
-    <div class="col-md-8 offset-md-2">
+  <div class="row justify-content-center" style="padding: 40px 0">
+    <div class="col-md-8">
       <h1>Bestilling</h1>
       <p>Det kan være vanskelig å forutse hvilke størrelser og typer deres kunder vil ha, og av den grunn anbefaler vi å
         benytte dere av våre bestillingsskjemaer for å samle opp bestillinger fra kunder på forhånd. </p>
