--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -1,7 +1,7 @@
 <app-navigation></app-navigation>
 <div class="container">
-  <div class="row" style="padding: 40px 0">
-    <div class="col-md-8 offset-md-2">
+  <div class="row justify-content-center" style="padding: 40px 0">
+    <div class="col-md-8">
       <h1>Personlig service</h1>
       <p style="font-size: 18px;">Dere velger selv hvor
         tett oppfølging dere ønsker.
