--- a/src/styles.css
+++ b/src/styles.css
@@ -119,3 +119,16 @@ h6 {
 button {
   cursor: pointer;
 }
+
+
+.btn-secondary {
+  color: #292b2c;
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.btn-secondary:hover, .btn-secondary:focus {
+  color: #292b2c;
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
