--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -32,7 +32,7 @@
             <i class="fa fa-phone"></i>926 27 081
           </li>
           <li>
-            <i class="fa fa-map-marker"></i>Ullevålsveien 109A, 0359 OSLO
+            <i class="fa fa-map-marker"></i>Thorvald Meyers gate 14, 0555 OSLO
           </li>
         </ul>
       </div>
