--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,12 +10,19 @@
         <h4 class="sub-title" style="text-align: left; font-size: 22px;">Nyttige lenker</h4>
         <ul class="list-unstyled">
           <li>
-            <a [routerLink]="['/privatperson']">Informasjon for privatpersoner
-            </a>
+            <a [routerLink]="['/']">Hjem</a>
           </li>
           <li>
-            <a [routerLink]="['/organisasjon']">Informasjon for organisasjoner
-            </a>
+            <a [routerLink]="['/bestilling']">Bestilling</a>
+          </li>
+          <li>
+            <a [routerLink]="['/slik-fungerer-det']">Dugnad på 1-2-3</a>
+          </li>
+          <li>
+            <a [routerLink]="['/personlig-service']">Personlig service</a>
+          </li>
+          <li>
+            <a [routerLink]="['/om-oss']">Om oss</a>
           </li>
         </ul>
       </div>
