- scss - style rebuild - send system request - product details - removed order and personal service

--- a/src/app/components/digital-order-form/digital-order-form.component.html
+++ b/src/app/components/digital-order-form/digital-order-form.component.html
@@ -21,7 +21,7 @@
 
       <div class="row">
         <div class="col text-center">
-          <app-order-sample-button></app-order-sample-button>
+          <button (click)="openSendSystemRequest()" class="btn btn-lg btn-success">Sett i gang</button>
         </div>
       </div>
 
