--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -29,14 +29,14 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/']">Hjem</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/bestilling']">Bestilling</a>
-        </li>
+        <!--<li class="nav-item">-->
+          <!--<a class="nav-link" [routerLink]="['/bestilling']">Bestilling</a>-->
+        <!--</li>-->
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/slik-fungerer-det']">Dugnad på 1-2-3</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/personlig-service']">Personlig service</a>
+          <a class="nav-link" [routerLink]="['/digitalt-bestillingsskjema']">Digitalt bestillingsskjema</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/om-oss']">Om oss</a>
