--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,23 +3,22 @@
 <div class="container">
   <div class="row justify-content-center" style="padding: 40px 0">
     <div class="col-md-8">
-      <h1>Om oss</h1>
       <h5><b>Vårt fokusområde er enkelhet og høy fortjeneste</b></h5>
       <p>I motsetning til å fylle opp garasjen med store pakker og gå flere turer i nabolaget ved levering, tilbyr vi
-        kun små produkter som tar liten plass og er lett å levere.
+        kun små produkter som tar liten plass og er lett å levere.</p>
 
-        Store innkjøp og små lager gjør at vi kan kutte prisene ned slik at dere får en høy fortjeneste, selv om
-        utsalgsprisen til deres kunder er lik butikkpris.
+      <p>Store innkjøp og små lager gjør at vi kan kutte prisene ned slik at dere får en høy fortjeneste, selv om
+        utsalgsprisen til deres kunder er lik butikkpris.</p>
 
-        Høy kvalitet og produkter som vanligvis kjøpes inn flere ganger gjennom et år fører til fornøyde kunder og store
-        muligheter for å iverksette en ny salgsrunde.
+      <p>Høy kvalitet og produkter som vanligvis kjøpes inn flere ganger gjennom et år fører til fornøyde kunder og
+        store
+        muligheter for å iverksette en ny salgsrunde.</p>
 
-        Si farvel til regneark, digitalt salgsskjema gjør hele salgsprossesen til en lek! Og om dere trenger hjelp til
-        noe som helst, så bistår vi når som helst.
+      <p>Si farvel til regneark, digitalt salgsskjema gjør hele salgsprossesen til en lek! Og om dere trenger hjelp til
+        noe som helst, så bistår vi når som helst.</p>
 
-        <b>Husk:</b> Vi tilbyr faktura med 3 uker betalingsfrist fra når varene er levert. Når dere fyller ut
-        salgsskjema så er salget gjort på forhånd og dere har god tid til å samle inn pengene før dere må betale.
-      </p>
+      <p><b>Husk:</b> Vi tilbyr faktura med 3 uker betalingsfrist fra når varene er levert. Når dere fyller ut
+        salgsskjema så er salget gjort på forhånd og dere har god tid til å samle inn pengene før dere må betale.</p>
 
     </div>
   </div>
