--- a/src/app/components/system-request-modal/system-request-modal.component.html
+++ b/src/app/components/system-request-modal/system-request-modal.component.html
@@ -6,7 +6,7 @@
 <div class="modal-body">
   <div class="row justify-content-center" style="margin: 75px 0">
     <div class="col-md-8text-center">
-      <h3 class="title" style="margin-bottom: 20px">Fyll inn for å få gratis vareprøver!</h3>
+      <h3 class="title" style="margin-bottom: 20px">Fyll inn for å få tilgang til systemet!</h3>
       <form role="form" [formGroup]="myForm" (ngSubmit)="submitForm(myForm.value)" novalidate>
         <div class="form-group">
           <input type="text"
@@ -15,6 +15,21 @@
           <div *ngIf="myForm.get('organization').touched">
             <small class="error" *ngIf="myForm.get('organization').hasError('required')">Dette feltet er krevd.</small>
             <small class="error" *ngIf="myForm.get('organization').hasError('minlength')">Dette feltet er for kort.</small>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <input type="email"
+                 class="form-control"
+                 formControlName="email"
+                 placeholder="E-post">
+          <div *ngIf="myForm.get('email').touched">
+            <small class="error" *ngIf="myForm.get('email').hasError('required')">Dette feltet er krevd.
+            </small>
+            <small class="error" *ngIf="myForm.get('email').hasError('minlength')">Dette feltet er for kort.
+            </small>
+            <small class="error" *ngIf="myForm.get('email').hasError('pattern')">Dette feltet har ugyldig verdi.
+            </small>
           </div>
         </div>
 
