--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,11 @@
 <header>
   <div class="container">
-    <div class="row header-row justify-content-center">
-      <div class="col-md-8 text-center">
-        <div class="box pad-box">
-          <h2 class="sale-title">HØSTKAMPANJE!</h2>
-          <h3 class="sale-sub-title">Over <strong>56% fortjeneste</strong> på alle produkter</h3>
-          <div class="row" style="margin-top: 20px">
-            <div class="col text-center">
-              <app-order-sample-button></app-order-sample-button>
-            </div>
-          </div>
+    <div class="box pad-box">
+      <h1 id="title">HØSTKAMPANJE!</h1>
+      <h2 class="sale-sub-title">Over <strong>56% fortjeneste</strong><br>på alle produkter</h2>
+      <div class="row" style="margin-top: 20px">
+        <div class="col text-center">
+          <app-order-sample-button></app-order-sample-button>
         </div>
       </div>
     </div>
