--- a/src/app/components/how/how.component.html
+++ b/src/app/components/how/how.component.html
@@ -63,5 +63,10 @@
   </div>
 </div>
 
+<app-call-to-action [image]="'computer.jpg'"
+                    [readMore]="true"
+                    [title]="'Digital dugnad gjør det enklere, både for deg og dine kunder'"
+                    [subTitle]="'Lett å lære - Uforpliktende - Risikofritt - Nye inntektsmuligheter'"
+></app-call-to-action>
 <app-footer></app-footer>
 
