--- a/src/app/components/digital-order-form/digital-order-form.component.html
+++ b/src/app/components/digital-order-form/digital-order-form.component.html
@@ -1,15 +1,18 @@
 <app-navigation></app-navigation>
 
+
 <div class="container">
   <div class="row justify-content-center" style="padding: 40px 0">
     <div class="col-md-8">
-      <h1>Digitalt bestillingsskjema</h1>
+      <h1>Digital dugnad</h1>
 
       <h5>Kvikt, enkelt og risikofritt</h5>
       <ol>
         <li>Dere mottar en unik lenke der deres kunder kan reservere produkter.
           <ul>
-            <li>Bruk <b>Facebook</b> og <b>e-post</b> til å sende rundt denne lenken, og be deres medlemmer om å gjøre det samme.</li>
+            <li>Bruk <b>Facebook</b> og <b>e-post</b> til å sende rundt denne lenken, og be deres medlemmer om å gjøre
+              det samme.
+            </li>
           </ul>
         </li>
         <li>Dere har alltid <strong>full oversikt og kontroll</strong> over alle reservasjoner</li>
@@ -17,16 +20,24 @@
         <li>Bestill opp alle reserverte produkter med et klikk</li>
       </ol>
 
-      <p>Høres dette interessant ut? Send en forespørsel på <b>gratis vareprøver</b>, så tar vi kontakt med dere!</p>
-
-      <div class="row">
-        <div class="col text-center">
-          <button (click)="openSendSystemRequest()" class="btn btn-lg btn-success">Sett i gang</button>
-        </div>
-      </div>
-
+      <ul>
+        <li>Små produkter som tar liten plass og er lett å levere.</li>
+        <li>Produkter av høy kvalitet som vanligvis kjøpes inn flere ganger gjennom et år gir fornøyde kunder og
+          store muligheter for å iverksette en ny salgsrunde.
+        </li>
+        <li>Si farvel til regneark, digitalt salgsskjema gjør hele salgsprossesen til en lek!</li>
+        <li>Faktura med 3 uker betalingsfrist fra når varene er levert.</li>
+        <li>Når dere fyller ut
+          salgsskjema så er salget gjort på forhånd og dere har god tid til å samle inn pengene før dere må betale.
+        </li>
+      </ul>
     </div>
   </div>
 </div>
+
+<app-call-to-action [image]="'computer-design.jpg'"
+                    [title]="'Digitaliser dugnaden'"
+                    [subTitle]="'Sett i gang i dag - Helt uforpliktende'">
+</app-call-to-action>
 
 <app-footer></app-footer>
