--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,17 +1,25 @@
 header {
-  background-image: url(../../../assets/images/header.png);
+  background: url(../../../assets/images/header/header.jpg) center no-repeat;
   width: 100%;
   height: 600px;
-}
+  max-height: 80vh;
+  display: flex;
+  align-items: center;
 
-.header-row {
-  padding-top: 20vh;
+  @media (max-width: 768px){
+    background: url(../../../assets/images/header/header_mobile.jpg) center no-repeat;
+    height: 500px;
+  }
 }
 
 .box {
   border: 1px solid #dddddd;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 5px;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .pad-box {
