--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,42 +1,37 @@
-<div style="padding: 0; background-color: dimgray; color: white; font-size: 12px">
+<section class="fixed-top" id="top-section">
+<div id="top-bar">
   <div class="container">
-    <div class="row" style="padding-top: 14px">
-      <div class="col-md-4 text-center">
-        <p><i class="fa fa-envelope"></i> <a href="mailto:kundeservice@onlinedugnad.no" style="color: white">kundeservice@onlinedugnad.no</a>
-        </p>
+    <div id="top-bar-row">
+      <div class="text-center" id="email-col">
+        <a class="top-bar-field" href="mailto:kundeservice@onlinedugnad.no"><i class="fa fa-envelope" aria-hidden="true"></i> kundeservice@onlinedugnad.no</a>
       </div>
-      <div class="col-md-4 text-center">
-        <p>Fri frakt • Faktura • Returrett • Enkelt • God fortjeneste</p>
+      <div class="text-center" id="values-col">
+        <span class="top-bar-field">Lett å selge - Lett å frakte - Returrett - God fortjeneste</span>
       </div>
-      <div class="col-md-4 text-center">
-        <p><i class="fa fa-phone"></i> 926 27 081</p>
+      <div class="text-center" id="phone-col">
+        <a class="top-bar-field" href="tel:92627081"><i class="fa fa-phone" aria-hidden="true"></i> 926 27 081</a>
       </div>
     </div>
   </div>
 </div>
-<nav class="navbar navbar-light navbar-expand-md bg-faded">
-  <div class="container navigation-container">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+
+<nav class="navbar navbar-light navbar-expand-md">
+  <div class="container" id="nav-container">
     <a class="navbar-brand" [routerLink]="['/']">
       <img src="/assets/images/logo/logo_icon@50.png" height="50" class="d-inline-block align-top" alt="Logo">
       <span style="line-height: 50px"><b><em>KVIKK</em></b> Dugnad</span>
     </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/']">Hjem</a>
-        </li>
-        <!--<li class="nav-item">-->
-          <!--<a class="nav-link" [routerLink]="['/bestilling']">Bestilling</a>-->
-        <!--</li>-->
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/slik-fungerer-det']">Dugnad på 1-2-3</a>
+          <a class="nav-link" [routerLink]="['/tips']">Tips</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/digitalt-bestillingsskjema']">Digitalt bestillingsskjema</a>
+          <a class="nav-link" [routerLink]="['/digital-dugnad']">Digital dugnad</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/om-oss']">Om oss</a>
@@ -45,3 +40,4 @@
     </div>
   </div>
 </nav>
+</section>
