--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -1,9 +1,52 @@
-@media all and (max-width: 576px) {
-  .navigation-container {
-    margin: 0;
+#top-section {
+  #top-bar {
+    padding: 10px 0;
+    background-color: rgba(100, 100, 100, 0.98);
+    color: white;
+
+    #top-bar-row {
+      display: flex;
+      justify-content: space-between;
+
+      #email-col {
+        flex-basis: 205px;
+      }
+
+      #values-col {
+        flex: 1 0 306px;
+      }
+
+      #phone-col {
+        flex-basis: 76px;
+      }
+    }
+
+    .top-bar-field {
+      font-size: 12px;
+      color: white;
+
+      a {
+        color: white;
+      }
+    }
+
+    @media (max-width: 768px) {
+      #values-col {
+        display: none;
+      }
+    }
+  }
+
+  .navbar {
+    background-color: rgba(255, 255, 255, 0.95);
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  @media (max-width: 991px) {
+    #nav-container {
+      padding: 0;
+    }
   }
 }
 
-.navbar-toggler {
-  margin-top: 10px;
-}
