--- a/src/app/components/order-sample/order-sample.component.html
+++ b/src/app/components/order-sample/order-sample.component.html
@@ -1,20 +1,20 @@
-<div class="modal-header">
-  <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
-    &times;
-  </button>
-</div>
-<div class="modal-body">
-  <div class="row justify-content-center" style="margin: 75px 0">
-    <div class="col-md-8text-center">
-      <h3 class="title" style="margin-bottom: 20px">Fyll inn for å få gratis vareprøver!</h3>
+<app-navigation></app-navigation>
+
+<section id="order-sample-section">
+<div class="container">
+  <h1 class="text-center page-title">Fyll inn for å få gratis vareprøver!</h1>
+  <div class="row justify-content-center">
+    <div class="col-lg-5 col-md-7 col-sm-10">
       <form role="form" [formGroup]="myForm" (ngSubmit)="submitForm(myForm.value)" novalidate>
         <div class="form-group">
           <input type="text"
                  class="form-control" formControlName="organization"
                  placeholder="Klubb/Organisasjon/Russegruppe">
           <div *ngIf="myForm.get('organization').touched">
-            <small class="error" *ngIf="myForm.get('organization').hasError('required')">Dette feltet er krevd.</small>
-            <small class="error" *ngIf="myForm.get('organization').hasError('minlength')">Dette feltet er for kort.</small>
+            <small class="error" *ngIf="myForm.get('organization').hasError('required')">Dette feltet er krevd.
+            </small>
+            <small class="error" *ngIf="myForm.get('organization').hasError('minlength')">Dette feltet er for kort.
+            </small>
           </div>
         </div>
 
@@ -41,3 +41,11 @@
     </div>
   </div>
 </div>
+</section>
+
+<app-call-to-action [image]="'computer.jpg'"
+                    [readMore]="true"
+                    [title]="'Digital dugnad gjør det enklere, både for deg og dine kunder'"
+                    [subTitle]="'Lett å lære - Uforpliktende - Risikofritt - Nye inntektsmuligheter'"
+></app-call-to-action>
+<app-footer></app-footer>
