Background images for forms

--- a/src/app/components/call-to-action/call-to-action.component.html
+++ b/src/app/components/call-to-action/call-to-action.component.html
@@ -10,6 +10,7 @@
       <div class="col text-center buttons">
         <a [routerLink]="['/digital-dugnad']" class="btn btn-primary" *ngIf="readMore">
           Les mer</a>
+        <a (click)="openContactMe()" class="btn btn-primary" href="javascript:void(0)" *ngIf="contact">Kontakt meg</a>
         <a (click)="openSendSystemRequest()" href="javascript:void(0)" class="btn btn-success">
           Sett i gang</a>
       </div>
