--- a/src/app/components/digital-order-form/digital-order-form.component.html
+++ b/src/app/components/digital-order-form/digital-order-form.component.html
@@ -37,7 +37,8 @@
 
 <app-call-to-action [image]="'computer-design.jpg'"
                     [title]="'Digitaliser dugnaden'"
-                    [subTitle]="'Sett i gang i dag - Helt uforpliktende'">
+                    [subTitle]="'Sett i gang i dag - Helt uforpliktende'"
+                    [contact]="true">
 </app-call-to-action>
 
 <app-footer></app-footer>
