--- a/src/app/components/order-sample/order-sample.component.scss
+++ b/src/app/components/order-sample/order-sample.component.scss
@@ -1,5 +1,9 @@
 #order-sample-section {
-  margin: 60px 0 60px 0;
+  background: url("../../../assets/images/team.jpg") center no-repeat;
+
+  @media (max-width: 768px){
+    background: url("../../../assets/images/team_mobile.jpg") center no-repeat;
+  }
 }
 
 .page-title {
