--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,3 +66,28 @@ h6 {
   }
 }
 
+.box {
+  border: 1px solid #dddddd;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.pad-box {
+  padding: 50px 20px;
+}
+
+.full-height-section {
+  height: calc(100vh - 120px);
+  display: flex;
+  align-items: center;
+  background-position-y: top;
+
+  @media (max-height: 500px) {
+    height: 400px;
+  }
+}
+
