- Removed unused imports - Removed unused packages - Russ frontpage - Localstorage save russ - Profit calculator inside digital order. - Error handling frontend bug fix

--- a/src/app/components/digital-order-form/digital-order-form.component.html
+++ b/src/app/components/digital-order-form/digital-order-form.component.html
@@ -19,7 +19,15 @@
         <li>Dere bestemmer selv hvordan dere vil ta av dere pengehåndtering - vi anbefaler å bruke <b>Vipps</b></li>
         <li>Bestill opp alle reserverte produkter med et klikk</li>
       </ol>
+    </div>
+  </div>
+</div>
 
+<app-profit-calculator></app-profit-calculator>
+
+<div class="container">
+  <div class="row justify-content-center" style="padding: 40px 0">
+    <div class="col-md-8">
       <ul>
         <li>Små produkter som tar liten plass og er lett å levere.</li>
         <li>Produkter av høy kvalitet som vanligvis kjøpes inn flere ganger gjennom et år gir fornøyde kunder og
