--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header [style.background]="'url(../../../assets/images/header/'+ image + '.jpg)'">
   <div class="container">
     <div class="box pad-box">
       <h1 id="title">HØSTKAMPANJE!</h1>
