--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,7 @@
         <h4>Lenker</h4>
         <ul class="list-unstyled">
           <li>
-            <a [routerLink]="['/']">Hjem</a>
+            <a (click)="navigateHome()" href="javascript:void(0)">Hjem</a>
           </li>
           <li>
             <a [routerLink]="['/tips']">Tips</a>
