--- a/src/app/components/profit-calculator/profit-calculator.component.html
+++ b/src/app/components/profit-calculator/profit-calculator.component.html
@@ -1,7 +1,6 @@
-<div class="container" style="padding-top: 40px">
-  <h2 class="title">Hvor mye tjener dere?</h2>
+<div class="container" style="padding: 40px">
   <div class="row justify-content-center">
-    <div class="col-md-6 text-center" style="padding: 10px">
+    <div class="col-md-6 col-sm-8 text-center" style="padding: 10px">
       <div style="border-radius: 5px; border: 1px solid #dddddd; padding: 15px 30px;">
         <div *ngFor="let slider of sliders">
           <label>{{slider.label}}<span *ngIf="slider.product"> per medlem</span></label>
@@ -11,30 +10,5 @@
         <strong>Dere tjener {{totalProfit}},-</strong>
       </div>
     </div>
-    <!--<div class="col-md-6 text-center" style="padding: 10px">-->
-      <!--<div style="border-radius: 5px; border: 1px solid #dddddd; padding: 15px 30px;">-->
-        <!--<h4>Bestillingsskjema</h4>-->
-        <!--<div>-->
-          <!--<table class="table table-order">-->
-            <!--<tbody>-->
-            <!--<tr *ngFor="let slider of sliders">-->
-              <!--<td *ngIf="slider.product" class="text-left">{{slider.model * sliders[0].model}} {{slider.label}}</td>-->
-              <!--<td *ngIf="slider.product" class="text-right">{{slider.model * slider.price * sliders[0].model}},-</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-              <!--<td class="text-left">Fakturabeløp inkl. moms og frakt:</td>-->
-              <!--<td class="text-right">kr {{totalPrice}},-</td>-->
-            <!--</tr>-->
-            <!--</tbody>-->
-          <!--</table>-->
-          <!--<hr>-->
-          <!--<h5>Selg først – betal senere!</h5>-->
-          <!--<small>-->
-            <!--Fakturaen har 20 dagers forfall om annet ikke er avtalt. Faktura sendes til dere etter at varene er sendt-->
-            <!--fra oss. Husk også at dere har 20 dagers returrett.-->
-          <!--</small>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
   </div>
 </div>
