--- a/src/app/components/russ/russ.component.html
+++ b/src/app/components/russ/russ.component.html
@@ -1,6 +1,6 @@
 <app-navigation></app-navigation>
 
-<app-header [image]="'header'"></app-header>
+<app-header [image]="'russ'"></app-header>
 
 <app-product-list [frontPage]="true" [products]="products"></app-product-list>
 
