Reservation system finished

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -27,7 +27,7 @@
 
       <div class="row">
         <div class="col text-center">
-          <a class="btn btn-primary no-max-width" [routerLink]="['/dugnad/' + club + '/reserver']">Gå videre</a>
+          <a class="btn btn-primary no-max-width" (click)="navigateToCheckout()" href="javascript:void(0)">Gå videre</a>
         </div>
       </div>
     </div>
