--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,5 +1,5 @@
 <app-shop-navigation></app-shop-navigation>
 
-<app-product-list [products]="products" [shop]="true"></app-product-list>
+<app-product-list [products]="products" [shop]="true" *ngIf="products"></app-product-list>
 
 <app-cart></app-cart>
